unpackaged/main/default/objects/Case/fields/Product_Family_KB__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_KB__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital Media</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>Laptops</fullName>
            </value>
            <value>
                <fullName>Tablets</fullName>
            </value>
            <value>
                <fullName>Phones</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>