unpackaged/main/default/objects/Case/fields/SLA_Type__c.field-meta.xml
<CustomField>
    <fullName>SLA_Type__c</fullName>
    <description>Created for use by Service Wave to segment cases by SLA. Entitlements field now accessible to Wave.</description>
    <label>SLA Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>